# ASD-forever

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  analyze_edges.py  commands.md  environment.yml  predict.py  prepare_abide.py  publication_plan.md  pyproject.toml  requirements.txt  run_benchmark.py  run_experiment.py  run_runpod.sh  run_sota.sh  setup.py  setup_runpod.sh  train_sota.py
ablation/: __init__.py  ablation_analyzer.py  ablation_config.py  ablation_results.py  ablation_runner.py  study_factory.py
configs/: __init__.py  config.yaml  config_schema.py
data/: __init__.py  abide_dataset.py  data_validator.py  download_abide.py  preprocess_abide.py
evaluation/: __init__.py  bootstrap.py  calibration.py  error_analysis.py  evaluator.py  metrics.py  robustness.py  statistical_tests.py
explainability/: __init__.py  attention_viz.py  explainability_engine.py  feature_importance.py  gradcam.py  integrated_gradients.py
hyperparameter_tuning/: __init__.py  analysis.py  callbacks.py  optuna_tuner.py  search_spaces.py
models/: asd_model.py  connectome_transformer.py
paper/: __init__.py  figure_specs.py  paper_figures.py
reporting/: report_generator.py
results/: data_validation_report.json  experiment_report.html  figure_manifest.tex  generate_plots.py
tests/: test_ablation.py  test_config.py  test_evaluation.py  test_explainability.py  test_fusion.py  test_genetics_models.py  test_genetics_preprocessing.py  test_hyperparameter_tuning.py  test_mri_models.py  test_mri_preprocessing.py  test_paper_figures.py  test_training.py  (+1 more)
training/: ema.py  (+6 more)
(+65 files in other folders)
